--- a/app.json
+++ b/app.json
@@ -19,6 +19,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "package": "ndefinemawi21.com",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyD5-Qs6UIF_4wF5mdYsHO0COZd7pxcyGgA"
+        }
       }
     },
     "web": {
@@ -27,10 +33,19 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "bc6edcf3-b90d-4037-ba71-6c2cca2608d4"
+      }
     }
   }
 }
