--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.17",
@@ -37,6 +39,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-animate": "^1.5.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
@@ -48,8 +52,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
