--- a/package.json
+++ b/package.json
@@ -15,23 +15,30 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.15",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
+    "expo-notifications": "^0.28.19",
     "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "haversine-distance": "^1.2.3",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -49,8 +56,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-image": "~1.12.15"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
